# egui_visualizer

./: .gitignore  Cargo.toml  README.md  frame.hpp  index.html  visualizer-5c57da71ec80ee45.js  visualizer-5c57da71ec80ee45_bg.wasm
.github/workflows/: pages.yml
cpp/: tsp.cpp
examples/: demo.rs  multi.rs
src/: lib.rs  main.rs  parser.rs  transform.rs
src/parser/: color.rs
visualizer/: Cargo.toml  demo.vis  index.html  multi.vis  toolchain
visualizer/src/: app.rs  lib.rs  main.rs  parser.rs  transform.rs
visualizer/src/app/: parser.rs  transform.rs
visualizer/src/parser/: color.rs
