[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
nom = "7.1.3"
color-name = "1.1.0"
colorous = "1.0.12"
visualizer_shapes = { path = "../" }
anyhow = "1.0.89"
egui-file-dialog = "0.7.0"
